clean typos and update package name

--- a/Indexable-Representation.ipynb
+++ b/Indexable-Representation.ipynb
@@ -11,13 +11,15 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "As mentioned in the presentation, indexable representation refers to recommendation algorihtms whose latent vector representations is immediately sublinear searchable. In this tutorial, we are going to experiment with one of such models, namely Indexable Bayesian Personalized Ranking or IBPR for short."
+    "As mentioned in the presentation, indexable representation refers to recommendation algorihtms whose latent vector representations are immediately sublinear searchable. In this tutorial, we are going to experiment with one of such models, namely Indexable Bayesian Personalized Ranking or IBPR for short."
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 1,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "%matplotlib inline\n",
@@ -38,7 +40,9 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "train   = pickle.load(open('train_data', 'rb'))\n",
@@ -48,7 +52,9 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "metadata": {},
+   "metadata": {
+    "collapsed": false
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -77,7 +83,9 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "metadata": {},
+   "metadata": {
+    "collapsed": false
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -99,7 +107,9 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "metadata": {},
+   "metadata": {
+    "collapsed": false
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -140,14 +150,16 @@
     "for nt in L_vals:\n",
     "    print('-----------------------------------------------------------------------')\n",
     "    for b in b_vals: \n",
-    "        prec, recall, touched = evalate_LSHTopK(test, data, -queries, CosineHashFamily, nt, b, dot, topK)\n",
+    "        prec, recall, touched = evaluate_LSHTopK(test, data, -queries, CosineHashFamily, nt, b, dot, topK)\n",
     "        print(\"{0}\\t{1}\\t{2}\\t{3}\\t{4}\".format(nt, b, prec/bpr_prec, recall/bpr_recall, touched)) \n"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 6,
-   "metadata": {},
+   "metadata": {
+    "collapsed": false
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -169,7 +181,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": false
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -210,14 +224,16 @@
     "for nt in L_vals:\n",
     "    print('-----------------------------------------------------------------------')\n",
     "    for b in b_vals: \n",
-    "        prec, recall, touched = evalate_LSHTopK(test, data, -queries, CosineHashFamily, nt, b, dot, topK)\n",
+    "        prec, recall, touched = evaluate_LSHTopK(test, data, -queries, CosineHashFamily, nt, b, dot, topK)\n",
     "        print(\"{0}\\t{1}\\t{2}\\t{3}\\t{4}\".format(nt, b, prec/ibpr_prec, recall/ibpr_recall, touched)) "
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": []
   }
@@ -238,7 +254,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.6"
+   "version": "3.6.0"
   }
  },
  "nbformat": 4,
