--- a/Scalable-Recommendation-Retrieval-with-Locality-Sensitive-Hashing.ipynb
+++ b/Scalable-Recommendation-Retrieval-with-Locality-Sensitive-Hashing.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Scalbale Recommendation Retrieval with Locality Sensitive Hashing\n",
+    "# Scalable Recommendation Retrieval with Locality Sensitive Hashing\n",
     "\n",
     "From the previous example, we can see that the cost of exhaustive search is linear to the number of items, i.e., $n$ and number of features, i.e., $d$. \n",
     "\n",
@@ -14,7 +14,9 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "%matplotlib inline\n",
@@ -33,7 +35,9 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "#load train/test data and trained pmf model\n",
@@ -61,7 +65,9 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "#number of recommendations\n",
@@ -78,7 +84,9 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "metadata": {},
+   "metadata": {
+    "collapsed": false
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -130,7 +138,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": false
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -158,7 +168,7 @@
     "for nt in L_vals:\n",
     "    print('-----------------------------------------------------------------------')\n",
     "    for b in b_vals: \n",
-    "        prec, recall, touched = evalate_LSHTopK(test, data, -queries, CosineHashFamily, nt, b, dot, topK)\n",
+    "        prec, recall, touched = evaluate_LSHTopK(test, data, -queries, CosineHashFamily, nt, b, dot, topK)\n",
     "        print(\"{0}\\t{1}\\t{2}\\t{3}\\t{4}\".format(nt, b, prec/linear_prec, recall/linear_recall, touched)) \n"
    ]
   },
@@ -178,7 +188,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "#apply Xbox transformation\n",
@@ -203,7 +215,7 @@
     "for nt in L_vals:\n",
     "    print('-----------------------------------------------------------------------')\n",
     "    for b in b_vals: \n",
-    "        prec, recall, touched = evalate_LSHTopK(test, n_data, -n_queries, CosineHashFamily, nt, b, dot, topK)\n",
+    "        prec, recall, touched = evaluate_LSHTopK(test, n_data, -n_queries, CosineHashFamily, nt, b, dot, topK)\n",
     "        print(\"{0}\\t{1}\\t{2}\\t{3}\\t{4}\".format(nt, b, prec/linear_prec, recall/linear_recall, touched)) \n"
    ]
   },
@@ -233,7 +245,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.6"
+   "version": "3.6.0"
   }
  },
  "nbformat": 4,
