Modify the evaluation function 	modified:   Indexable-Representation.ipynb 	modified:   Matrix-Factorization-Recommendation-Retrieval.ipynb 	modified:   Scalable-Recommendation-Retrieval-with-Locality-Sensitive-Hashing.ipynb 	modified:   utils/evaluation.py

--- a/Indexable-Representation.ipynb
+++ b/Indexable-Representation.ipynb
@@ -17,9 +17,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "%matplotlib inline\n",
@@ -39,10 +37,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 3,
+   "metadata": {},
    "outputs": [],
    "source": [
     "train   = pickle.load(open('train_data', 'rb'))\n",
@@ -51,10 +47,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
-   "metadata": {
-    "collapsed": false
-   },
+   "execution_count": 4,
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
@@ -64,14 +58,14 @@
       "exclude_unknowns = False\n",
       "Building training set\n",
       "Number of training users = 6040\n",
-      "Number of training items = 3659\n",
+      "Number of training items = 3653\n",
       "Max rating = 5.0\n",
       "Min rating = 1.0\n",
       "Global mean = 3.6\n",
       "Building test set\n",
       "Number of tested users = 6040\n",
       "Number of unknown users = 0\n",
-      "Number of unknown items = 47\n"
+      "Number of unknown items = 53\n"
      ]
     }
    ],
@@ -82,22 +76,39 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
-   "metadata": {
-    "collapsed": false
-   },
+   "execution_count": 5,
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
       "Shafling the data\n",
-      "epoch: 0 loss: tensor(5307.4399, grad_fn=<ThSubBackward>)\n"
+      "epoch: 0 loss: tensor(17408.7070, grad_fn=<ThSubBackward>)\n",
+      "epoch: 1 loss: tensor(13686.6016, grad_fn=<ThSubBackward>)\n",
+      "epoch: 2 loss: tensor(10173.0039, grad_fn=<ThSubBackward>)\n",
+      "epoch: 3 loss: tensor(7622.8193, grad_fn=<ThSubBackward>)\n",
+      "epoch: 4 loss: tensor(5089.6064, grad_fn=<ThSubBackward>)\n",
+      "epoch: 5 loss: tensor(3275.9167, grad_fn=<ThSubBackward>)\n",
+      "epoch: 6 loss: tensor(2449.0005, grad_fn=<ThSubBackward>)\n",
+      "epoch: 7 loss: tensor(1990.2163, grad_fn=<ThSubBackward>)\n",
+      "epoch: 8 loss: tensor(1669.7302, grad_fn=<ThSubBackward>)\n",
+      "epoch: 9 loss: tensor(1575.4259, grad_fn=<ThSubBackward>)\n",
+      "epoch: 10 loss: tensor(1524.7628, grad_fn=<ThSubBackward>)\n",
+      "epoch: 11 loss: tensor(1441.0527, grad_fn=<ThSubBackward>)\n",
+      "epoch: 12 loss: tensor(1390.6527, grad_fn=<ThSubBackward>)\n",
+      "epoch: 13 loss: tensor(1356.9264, grad_fn=<ThSubBackward>)\n",
+      "epoch: 14 loss: tensor(1274.9127, grad_fn=<ThSubBackward>)\n",
+      "epoch: 15 loss: tensor(1214.0642, grad_fn=<ThSubBackward>)\n",
+      "epoch: 16 loss: tensor(1181.7015, grad_fn=<ThSubBackward>)\n",
+      "epoch: 17 loss: tensor(1150.1903, grad_fn=<ThSubBackward>)\n",
+      "epoch: 18 loss: tensor(1113.0569, grad_fn=<ThSubBackward>)\n",
+      "epoch: 19 loss: tensor(1124.7440, grad_fn=<ThSubBackward>)\n"
      ]
     }
    ],
    "source": [
-    "rec_bpr = BPR(k = 50, max_iter=50, learning_rate=0.05, lamda=0.001, batch_size=5000, init_params={'U':None, 'V':None})\n",
+    "rec_bpr = BPR(k = 50, max_iter=20, learning_rate=0.01, lamda=0.001, batch_size=5000, init_params={'U':None, 'V':None})\n",
     "rec_bpr.fit(eval_method.train_set)\n",
     "\n",
     "pickle.dump(rec_bpr, open('bpr.model', 'wb'))\n",
@@ -106,91 +117,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
-   "metadata": {
-    "collapsed": false
-   },
+   "execution_count": null,
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
       "bpr_prec@10 \t bpr_recall@10\n",
-      "0.013344370860927147\t0.002546935131049344\n",
-      "#table\t #bit \t relative_prec@10 \t relative_recall@10 \t touched\n",
-      "-----------------------------------------------------------------------\n",
-      "10\t4\t0.9292803970223333\t0.9344277772763477\t0.46731057774624485\n"
-     ]
-    }
-   ],
-   "source": [
-    "#number of recommendations\n",
-    "topK = 10\n",
-    "\n",
-    "#construct the recommendation list\n",
-    "inv_lst = np.unique(test[:, 0]).astype(int)\n",
-    "bpr_rec_list = {}\n",
-    "for inv in inv_lst:\n",
-    "    if bpr_rec_list.get(inv, None) is None:\n",
-    "        bpr_rec_list[inv] = rec_bpr.rank(inv)[:topK]\n",
-    "        \n",
-    "bpr_prec, bpr_recall = evaluate_topK(test, bpr_rec_list, topK)\n",
-    "print('bpr_prec@{0} \\t bpr_recall@{0}'.format(topK))\n",
-    "print('{0}\\t{1}'.format(bpr_prec, bpr_recall))\n",
-    "print('-----------------------------------------------------------------------')\n",
-    "\n",
-    "topK = 10\n",
-    "b_vals = [4]\n",
-    "L_vals = [10]\n",
-    "\n",
-    "queries = rec_bpr.U\n",
-    "data    = rec_bpr.V\n",
-    "\n",
-    "print('#table\\t #bit \\t relative_prec@{0} \\t relative_recall@{0} \\t touched'.format(topK))\n",
-    "for nt in L_vals:\n",
-    "    print('-----------------------------------------------------------------------')\n",
-    "    for b in b_vals: \n",
-    "        prec, recall, touched = evaluate_LSHTopK(test, data, -queries, CosineHashFamily, nt, b, dot, topK)\n",
-    "        print(\"{0}\\t{1}\\t{2}\\t{3}\\t{4}\".format(nt, b, prec/bpr_prec, recall/bpr_recall, touched)) \n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 6,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Shafling the data\n",
-      "epoch: 0 loss: tensor(3612.6685, grad_fn=<ThSubBackward>)\n"
-     ]
-    }
-   ],
-   "source": [
-    "rec_ibpr = IBPR(k = 50, max_iter=50, learning_rate=0.05, lamda=0.001, batch_size=5000, init_params={'U':None, 'V':None})\n",
-    "rec_ibpr.fit(eval_method.train_set)\n",
-    "\n",
-    "pickle.dump(rec_ibpr, open('ibpr.model', 'wb'))\n",
-    "#rec_ibpr = pickle.load(open('ibpr.model', 'rb'))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "ibpr_prec@10 \t ibpr_recall@10\n",
-      "0.013112582781456928\t0.0025468861595255837\n",
+      "0.012412412412412392\t0.0029740255751578826\n",
       "-----------------------------------------------------------------------\n",
       "#table\t #bit \t relative_prec@10 \t relative_recall@10 \t touched\n",
       "-----------------------------------------------------------------------\n"
@@ -201,14 +136,61 @@
     "#number of recommendations\n",
     "topK = 10\n",
     "\n",
-    "#construct the recommendation list\n",
-    "inv_lst = np.unique(test[:, 0]).astype(int)\n",
-    "ibpr_rec_list = {}\n",
-    "for inv in inv_lst:\n",
-    "    if ibpr_rec_list.get(inv, None) is None:\n",
-    "        ibpr_rec_list[inv] = rec_ibpr.rank(inv)[:topK]\n",
+    "queries = rec_bpr.U[1:1000,:]\n",
+    "data    = rec_bpr.V\n",
+    "\n",
+    "M = np.linalg.norm(data, axis=1)\n",
+    "max_norm = max(M)\n",
+    "q_norm = np.sqrt((queries * queries).sum(axis=1))\n",
+    "n_queries = queries/q_norm.reshape(queries.shape[0], 1)\n",
+    "\n",
+    "n_data = np.concatenate((data, np.sqrt(max_norm**2 - pow(M, 2)).reshape(data.shape[0], -1)), axis = 1)\n",
+    "n_data = n_data/max_norm # normalized data vectors\n",
+    "n_queries = np.concatenate((n_queries, np.zeros((n_queries.shape[0], 1))), axis = 1)\n",
     "        \n",
-    "ibpr_prec, ibpr_recall = evaluate_topK(test, ibpr_rec_list, topK)\n",
+    "bpr_prec, bpr_recall = evaluate_topK(test, data, queries, topK)\n",
+    "print('bpr_prec@{0} \\t bpr_recall@{0}'.format(topK))\n",
+    "print('{0}\\t{1}'.format(bpr_prec, bpr_recall))\n",
+    "print('-----------------------------------------------------------------------')\n",
+    "\n",
+    "topK = 10\n",
+    "b_vals = [4]\n",
+    "L_vals = [10]\n",
+    "\n",
+    "print('#table\\t #bit \\t relative_prec@{0} \\t relative_recall@{0} \\t touched'.format(topK))\n",
+    "for nt in L_vals:\n",
+    "    print('-----------------------------------------------------------------------')\n",
+    "    for b in b_vals: \n",
+    "        prec, recall, touched = evaluate_LSHTopK(test, n_data, - n_queries, CosineHashFamily, nt, b, dot, topK)\n",
+    "        print(\"{0}\\t{1}\\t{2}\\t{3}\\t{4}\".format(nt, b, prec/bpr_prec, recall/bpr_recall, touched)) \n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "rec_ibpr = IBPR(k = 50, max_iter=20, learning_rate=0.01, lamda=0.001, batch_size=5000, init_params={'U':None, 'V':None})\n",
+    "rec_ibpr.fit(eval_method.train_set)\n",
+    "\n",
+    "pickle.dump(rec_ibpr, open('ibpr.model', 'wb'))\n",
+    "#rec_ibpr = pickle.load(open('ibpr.model', 'rb'))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#number of recommendations\n",
+    "topK = 10\n",
+    "\n",
+    "queries = rec_ibpr.U[1:1000, :]\n",
+    "data    = rec_ibpr.V\n",
+    "\n",
+    "ibpr_prec, ibpr_recall = evaluate_topK(test, data, queries, topK)\n",
     "print('ibpr_prec@{0} \\t ibpr_recall@{0}'.format(topK))\n",
     "print('{0}\\t{1}'.format(ibpr_prec, ibpr_recall))\n",
     "print('-----------------------------------------------------------------------')\n",
@@ -216,9 +198,6 @@
     "topK = 10\n",
     "b_vals = [4]\n",
     "L_vals = [10]\n",
-    "\n",
-    "queries = rec_ibpr.U\n",
-    "data    = rec_ibpr.V\n",
     "\n",
     "print('#table\\t #bit \\t relative_prec@{0} \\t relative_recall@{0} \\t touched'.format(topK))\n",
     "for nt in L_vals:\n",
@@ -254,7 +233,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.0"
+   "version": "3.6.6"
   }
  },
  "nbformat": 4,
