--- a/Scalable-Recommendation-Retrieval-with-Locality-Sensitive-Hashing.ipynb
+++ b/Scalable-Recommendation-Retrieval-with-Locality-Sensitive-Hashing.ipynb
@@ -14,9 +14,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "%matplotlib inline\n",
@@ -35,9 +33,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "#load train/test data and trained pmf model\n",
@@ -64,41 +60,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": [
-    "#number of recommendations\n",
-    "topK = 10\n",
-    "\n",
-    "#construct the recommendation list\n",
-    "inv_lst = np.unique(test[:, 0]).astype(int)\n",
-    "rec_list = {}\n",
-    "for inv in inv_lst:\n",
-    "    if rec_list.get(inv, None) is None:\n",
-    "        rec_list[inv] = np.argsort(pmf_mvl.predict(inv))[-topK:]"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 6,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
       "linear_prec@10 \t linear_recall@10\n",
-      "0.07596026490066361\t0.02246526738773978\n"
+      "0.06124999999999967\t0.017057744682184253\n"
      ]
     }
    ],
    "source": [
-    "linear_prec, linear_recall = evaluate_topK(test, rec_list, topK)\n",
+    "# measuring performance of the first 1000 users\n",
+    "topK = 10\n",
+    "data = pmf_mvl.w_Item\n",
+    "queries = pmf_mvl.w_User[:2000,:]\n",
+    "\n",
+    "linear_prec, linear_recall = evaluate_topK(test, data, queries, topK)\n",
     "print('linear_prec@{0} \\t linear_recall@{0}'.format(topK))\n",
     "print('{0}\\t{1}'.format(linear_prec, linear_recall))"
    ]
@@ -122,12 +102,12 @@
     "\n",
     "In this experiment, we immediately build LSH index on the output of PMF algorithm. You should expect to see the precision and recall degeneration as compared to those of linear scanning solution. Here, we report three values here:\n",
     "\n",
-    "1. relative_prec@10 = $\\frac{\\text{precision@10 of LSH Indexing}}{\\text{precision@10 of linearning scanning}}$ \n",
+    "1. relative_prec@10 = $\\frac{\\text{precision@10 of LSH Indexing}}{\\text{precision@10 of linear scanning}}$ \n",
     "&nbsp;\n",
     "&nbsp;\n",
     "&nbsp;  \n",
     "&nbsp;\n",
-    "2. relative_rec@10    = $\\frac{\\text{recall@10 of LSH Indexing}}{\\text{recall@10 of linearning scanning}}$\n",
+    "2. relative_rec@10    = $\\frac{\\text{recall@10 of LSH Indexing}}{\\text{recall@10 of linear scanning}}$\n",
     "&nbsp;\n",
     "&nbsp;\n",
     "&nbsp;  \n",
@@ -137,10 +117,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
+   "execution_count": 7,
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
@@ -148,21 +126,19 @@
      "text": [
       "#table\t #bit \t relative_prec@10 \t relative_recall@10 \t touched\n",
       "-----------------------------------------------------------------------\n",
-      "10\t4\t0.5921970357454026\t0.5254602505803535\t0.5487593042755691\n",
-      "10\t6\t0.4457279860505477\t0.3726053930829359\t0.1794293628948087\n",
-      "10\t8\t0.2883609415867385\t0.2011188303742779\t0.06183592644030939\n",
-      "10\t10\t0.13927637314733962\t0.08850741285891302\t0.022793988302957098\n",
-      "-----------------------------------------------------------------------\n"
+      "10\t4\t0.7028571428571463\t0.6183517842995306\t0.5134272704275233\n",
+      "10\t6\t0.5371428571428633\t0.45278829100382784\t0.17906703769289148\n",
+      "10\t8\t0.3673469387755143\t0.28229437262776685\t0.06362484189223375\n"
      ]
     }
    ],
    "source": [
     "topK = 10\n",
-    "b_vals = [4, 6, 8, 10]\n",
-    "L_vals = [10, 20, 30]\n",
+    "b_vals = [4, 6, 8]\n",
+    "L_vals = [10]\n",
     "\n",
-    "queries = pmf_mvl.w_User\n",
-    "data    = pmf_mvl.w_Item\n",
+    "#queries = pmf_mvl.w_User\n",
+    "#data    = pmf_mvl.w_Item\n",
     "\n",
     "print('#table\\t #bit \\t relative_prec@{0} \\t relative_recall@{0} \\t touched'.format(topK))\n",
     "for nt in L_vals:\n",
@@ -187,19 +163,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Done X-box transformation!\n",
+      "#table\t #bit \t relative_prec@10 \t relative_recall@10 \t touched\n",
+      "-----------------------------------------------------------------------\n",
+      "10\t4\t0.7567346938775529\t0.7434445260136354\t0.5263244371363521\n",
+      "10\t6\t0.5853061224489848\t0.48820509870463114\t0.2569395395901847\n",
+      "10\t8\t0.36000000000000376\t0.3437796131681326\t0.04525739944346066\n"
+     ]
+    }
+   ],
    "source": [
     "#apply Xbox transformation\n",
     "topK = 10\n",
-    "b_vals = [4, 6, 8, 10]\n",
-    "L_vals = [10, 20, 30]\n",
+    "b_vals = [4, 6, 8]\n",
+    "L_vals = [10]\n",
     "\n",
-    "queries = pmf_mvl.w_User\n",
-    "data    = pmf_mvl.w_Item\n",
+    "#queries = pmf_mvl.w_User\n",
+    "#data    = pmf_mvl.w_Item\n",
     "\n",
     "M = np.linalg.norm(data, axis=1)\n",
     "max_norm = max(M)\n",
@@ -222,9 +209,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": []
   }
@@ -245,7 +230,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.0"
+   "version": "3.6.6"
   }
  },
  "nbformat": 4,
