update new files and modify indexable representation tutorial

--- a/Part-3-Indexable-Representation.ipynb
+++ b/Part-3-Indexable-Representation.ipynb
@@ -36,6 +36,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Load the train/test data"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 3,
    "metadata": {},
@@ -75,8 +82,21 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Bayesian Personalized Ranking - BPR\n",
+    "\n",
+    "We first measure the performance both after learning and after indexing of BPR model. Details of the paper can be found in the following link: [BPR-paper](https://arxiv.org/ftp/arxiv/papers/1205/1205.2618.pdf).\n",
+    "\n",
+    "\n",
+    "<img src='resources/images/bpr.png' width = 700>\n",
+    "\n"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -84,31 +104,12 @@
      "output_type": "stream",
      "text": [
       "Shafling the data\n",
-      "epoch: 0 loss: tensor(17408.7070, grad_fn=<ThSubBackward>)\n",
-      "epoch: 1 loss: tensor(13686.6016, grad_fn=<ThSubBackward>)\n",
-      "epoch: 2 loss: tensor(10173.0039, grad_fn=<ThSubBackward>)\n",
-      "epoch: 3 loss: tensor(7622.8193, grad_fn=<ThSubBackward>)\n",
-      "epoch: 4 loss: tensor(5089.6064, grad_fn=<ThSubBackward>)\n",
-      "epoch: 5 loss: tensor(3275.9167, grad_fn=<ThSubBackward>)\n",
-      "epoch: 6 loss: tensor(2449.0005, grad_fn=<ThSubBackward>)\n",
-      "epoch: 7 loss: tensor(1990.2163, grad_fn=<ThSubBackward>)\n",
-      "epoch: 8 loss: tensor(1669.7302, grad_fn=<ThSubBackward>)\n",
-      "epoch: 9 loss: tensor(1575.4259, grad_fn=<ThSubBackward>)\n",
-      "epoch: 10 loss: tensor(1524.7628, grad_fn=<ThSubBackward>)\n",
-      "epoch: 11 loss: tensor(1441.0527, grad_fn=<ThSubBackward>)\n",
-      "epoch: 12 loss: tensor(1390.6527, grad_fn=<ThSubBackward>)\n",
-      "epoch: 13 loss: tensor(1356.9264, grad_fn=<ThSubBackward>)\n",
-      "epoch: 14 loss: tensor(1274.9127, grad_fn=<ThSubBackward>)\n",
-      "epoch: 15 loss: tensor(1214.0642, grad_fn=<ThSubBackward>)\n",
-      "epoch: 16 loss: tensor(1181.7015, grad_fn=<ThSubBackward>)\n",
-      "epoch: 17 loss: tensor(1150.1903, grad_fn=<ThSubBackward>)\n",
-      "epoch: 18 loss: tensor(1113.0569, grad_fn=<ThSubBackward>)\n",
-      "epoch: 19 loss: tensor(1124.7440, grad_fn=<ThSubBackward>)\n"
+      "epoch: 0 loss: tensor(26494.1270, grad_fn=<ThSubBackward>)\n"
      ]
     }
    ],
    "source": [
-    "rec_bpr = BPR(k = 50, max_iter=20, learning_rate=0.01, lamda=0.001, batch_size=5000, init_params={'U':None, 'V':None})\n",
+    "rec_bpr = BPR(k = 100, max_iter=50, learning_rate=0.01, lamda=0.001, batch_size=5000, init_params={'U':None, 'V':None})\n",
     "rec_bpr.fit(eval_method.train_set)\n",
     "\n",
     "pickle.dump(rec_bpr, open('bpr.model', 'wb'))\n",
@@ -117,22 +118,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "bpr_prec@10 \t bpr_recall@10\n",
-      "0.012412412412412392\t0.0029740255751578826\n",
-      "-----------------------------------------------------------------------\n",
-      "#table\t #bit \t relative_prec@10 \t relative_recall@10 \t touched\n",
-      "-----------------------------------------------------------------------\n",
-      "10\t4\t0.9999999999999999\t0.8440648078992579\t0.5125982812815553\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "#number of recommendations\n",
     "topK = 10\n",
@@ -167,31 +155,24 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Indexable Bayesian Personalized Ranking - IBPR\n",
+    "\n",
+    "We will test the effectiveness of indexable model here. In this experiment, we train IBPR with the same data we use for BPR above. Details of the paper can be found in the following link: [IBPR-paper](https://ink.library.smu.edu.sg/sis_research/3884/)\n",
+    "\n",
+    "<img src='resources/images/ibpr.png' width=700>\n",
+    "\n"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Shafling the data\n",
-      "epoch: 0 loss: tensor(3618.1514, grad_fn=<ThSubBackward>)\n",
-      "epoch: 1 loss: tensor(3539.0757, grad_fn=<ThSubBackward>)\n",
-      "epoch: 2 loss: tensor(3431.6787, grad_fn=<ThSubBackward>)\n",
-      "epoch: 3 loss: tensor(3203.1575, grad_fn=<ThSubBackward>)\n",
-      "epoch: 4 loss: tensor(2893.4412, grad_fn=<ThSubBackward>)\n",
-      "epoch: 5 loss: tensor(2631.2292, grad_fn=<ThSubBackward>)\n",
-      "epoch: 6 loss: tensor(2451.8796, grad_fn=<ThSubBackward>)\n",
-      "epoch: 7 loss: tensor(2335.0217, grad_fn=<ThSubBackward>)\n",
-      "epoch: 8 loss: tensor(2208.5366, grad_fn=<ThSubBackward>)\n",
-      "epoch: 9 loss: tensor(2117.9155, grad_fn=<ThSubBackward>)\n",
-      "epoch: 10 loss: tensor(2073.1450, grad_fn=<ThSubBackward>)\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "rec_ibpr = IBPR(k = 50, max_iter=20, learning_rate=0.01, lamda=0.001, batch_size=5000, init_params={'U':None, 'V':None})\n",
+    "rec_ibpr = IBPR(k = 100, max_iter=50, learning_rate=0.01, lamda=0.001, batch_size=5000, init_params={'U':None, 'V':None})\n",
     "rec_ibpr.fit(eval_method.train_set)\n",
     "\n",
     "pickle.dump(rec_ibpr, open('ibpr.model', 'wb'))\n",
