Clean three notebooks 	modified:   Part-1-Matrix-Factorization-Recommendation-Retrieval.ipynb 	modified:   Part-2-Scalable-Recommendation-Retrieval-with-Locality-Sensitive-Hashing.ipynb 	modified:   Part-3-Indexable-Representation.ipynb

--- a/Part-2-Scalable-Recommendation-Retrieval-with-Locality-Sensitive-Hashing.ipynb
+++ b/Part-2-Scalable-Recommendation-Retrieval-with-Locality-Sensitive-Hashing.ipynb
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -32,14 +32,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "#load train/test data and trained pmf model\n",
-    "pmf_mvl = pickle.load(open('pmf_mvl1m.model', 'rb'))\n",
-    "train   = pickle.load(open('train_data', 'rb'))\n",
-    "test    = pickle.load(open('test_data', 'rb'))"
+    "path_to_model = 'pmf_mvl1m.model'\n",
+    "path_to_train_data = 'train_data'\n",
+    "path_to_tets_data  = 'test_data'\n",
+    "\n",
+    "pmf_mvl = pickle.load(open(path_to_model, 'rb'))\n",
+    "train   = pickle.load(open(path_to_train_data, 'rb'))\n",
+    "test    = pickle.load(open(path_to_test_data, 'rb'))"
    ]
   },
   {
@@ -60,18 +64,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "linear_prec@10 \t linear_recall@10\n",
-      "0.06124999999999967\t0.017057744682184253\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# measuring performance of the first 2000 users\n",
     "topK = 10\n",
@@ -117,21 +112,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "#table\t #bit \t relative_prec@10 \t relative_recall@10 \t touched\n",
-      "-----------------------------------------------------------------------\n",
-      "10\t4\t0.7028571428571463\t0.6183517842995306\t0.5134272704275233\n",
-      "10\t6\t0.5371428571428633\t0.45278829100382784\t0.17906703769289148\n",
-      "10\t8\t0.3673469387755143\t0.28229437262776685\t0.06362484189223375\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "topK = 10\n",
     "b_vals = [4, 6, 8]\n",
@@ -163,22 +146,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Done X-box transformation!\n",
-      "#table\t #bit \t relative_prec@10 \t relative_recall@10 \t touched\n",
-      "-----------------------------------------------------------------------\n",
-      "10\t4\t0.7567346938775529\t0.7434445260136354\t0.5263244371363521\n",
-      "10\t6\t0.5853061224489848\t0.48820509870463114\t0.2569395395901847\n",
-      "10\t8\t0.36000000000000376\t0.3437796131681326\t0.04525739944346066\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "#apply Xbox transformation\n",
     "topK = 10\n",
