--- a/Part-3-Indexable-Representation.ipynb
+++ b/Part-3-Indexable-Representation.ipynb
@@ -104,7 +104,15 @@
      "output_type": "stream",
      "text": [
       "Shafling the data\n",
-      "epoch: 0 loss: tensor(26494.1270, grad_fn=<ThSubBackward>)\n"
+      "epoch: 0 loss: tensor(26494.1270, grad_fn=<ThSubBackward>)\n",
+      "epoch: 1 loss: tensor(20454.8145, grad_fn=<ThSubBackward>)\n",
+      "epoch: 2 loss: tensor(15535.7539, grad_fn=<ThSubBackward>)\n",
+      "epoch: 3 loss: tensor(11056.4785, grad_fn=<ThSubBackward>)\n",
+      "epoch: 4 loss: tensor(7414.7637, grad_fn=<ThSubBackward>)\n",
+      "epoch: 5 loss: tensor(4827.0947, grad_fn=<ThSubBackward>)\n",
+      "epoch: 6 loss: tensor(3617.7368, grad_fn=<ThSubBackward>)\n",
+      "epoch: 7 loss: tensor(2808.7278, grad_fn=<ThSubBackward>)\n",
+      "epoch: 8 loss: tensor(2529.4912, grad_fn=<ThSubBackward>)\n"
      ]
     }
    ],
