add pre-trained models: bpr and ibpr 	new file:   bpr.model 	new file:   ibpr.model

--- a/Part-3-Indexable-Representation.ipynb
+++ b/Part-3-Indexable-Representation.ipynb
@@ -44,7 +44,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -54,7 +54,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -96,32 +96,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Shafling the data\n",
-      "epoch: 0 loss: tensor(26494.1270, grad_fn=<ThSubBackward>)\n",
-      "epoch: 1 loss: tensor(20454.8145, grad_fn=<ThSubBackward>)\n",
-      "epoch: 2 loss: tensor(15535.7539, grad_fn=<ThSubBackward>)\n",
-      "epoch: 3 loss: tensor(11056.4785, grad_fn=<ThSubBackward>)\n",
-      "epoch: 4 loss: tensor(7414.7637, grad_fn=<ThSubBackward>)\n",
-      "epoch: 5 loss: tensor(4827.0947, grad_fn=<ThSubBackward>)\n",
-      "epoch: 6 loss: tensor(3617.7368, grad_fn=<ThSubBackward>)\n",
-      "epoch: 7 loss: tensor(2808.7278, grad_fn=<ThSubBackward>)\n",
-      "epoch: 8 loss: tensor(2529.4912, grad_fn=<ThSubBackward>)\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "rec_bpr = BPR(k = 100, max_iter=50, learning_rate=0.01, lamda=0.001, batch_size=5000, init_params={'U':None, 'V':None})\n",
-    "rec_bpr.fit(eval_method.train_set)\n",
+    "#rec_bpr = BPR(k = 10, max_iter=5, learning_rate=0.01, lamda=0.001, batch_size=5000, init_params={'U':None, 'V':None})\n",
+    "#rec_bpr.fit(eval_method.train_set)\n",
     "\n",
-    "pickle.dump(rec_bpr, open('bpr.model', 'wb'))\n",
-    "#rec_bpr = pickle.load(rec_bpr, open('bpr.model', 'rb'))"
+    "#pickle.dump(rec_bpr, open('bpr.model', 'wb'))\n",
+    "rec_bpr = pickle.load(open('bpr.model', 'rb'))"
    ]
   },
   {
@@ -163,6 +146,42 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "bpr_prec@10 \t bpr_recall@10\n",
+      "0.012412412412412392\t0.0029740255751578826\n",
+      "-----------------------------------------------------------------------\n"
+     ]
+    }
+   ],
+   "source": [
+    "topK = 10\n",
+    "\n",
+    "queries = rec_bpr.U[1:1000,:]\n",
+    "data    = rec_bpr.V\n",
+    "\n",
+    "M = np.linalg.norm(data, axis=1)\n",
+    "max_norm = max(M)\n",
+    "q_norm = np.sqrt((queries * queries).sum(axis=1))\n",
+    "n_queries = queries/q_norm.reshape(queries.shape[0], 1)\n",
+    "\n",
+    "n_data = np.concatenate((data, np.sqrt(max_norm**2 - pow(M, 2)).reshape(data.shape[0], -1)), axis = 1)\n",
+    "n_data = n_data/max_norm # normalized data vectors\n",
+    "n_queries = np.concatenate((n_queries, np.zeros((n_queries.shape[0], 1))), axis = 1)\n",
+    "        \n",
+    "bpr_prec, bpr_recall = evaluate_topK(test, data, queries, topK)\n",
+    "print('bpr_prec@{0} \\t bpr_recall@{0}'.format(topK))\n",
+    "print('{0}\\t{1}'.format(bpr_prec, bpr_recall))\n",
+    "print('-----------------------------------------------------------------------')"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -176,22 +195,35 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
-    "rec_ibpr = IBPR(k = 100, max_iter=50, learning_rate=0.01, lamda=0.001, batch_size=5000, init_params={'U':None, 'V':None})\n",
-    "rec_ibpr.fit(eval_method.train_set)\n",
+    "#rec_ibpr = IBPR(k = 10, max_iter=20, learning_rate=0.01, lamda=0.001, batch_size=5000, init_params={'U':None, 'V':None})\n",
+    "#rec_ibpr.fit(eval_method.train_set)\n",
     "\n",
-    "pickle.dump(rec_ibpr, open('ibpr.model', 'wb'))\n",
-    "#rec_ibpr = pickle.load(open('ibpr.model', 'rb'))"
+    "#pickle.dump(rec_ibpr, open('ibpr.model', 'wb'))\n",
+    "rec_ibpr = pickle.load(open('ibpr.model', 'rb'))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "ibpr_prec@10 \t ibpr_recall@10\n",
+      "0.012712712712712687\t0.0029441157036106534\n",
+      "-----------------------------------------------------------------------\n",
+      "#table\t #bit \t relative_prec@10 \t relative_recall@10 \t touched\n",
+      "-----------------------------------------------------------------------\n",
+      "10\t4\t1.023622047244095\t0.9421160229474571\t0.6590664028386448\n"
+     ]
+    }
+   ],
    "source": [
     "#number of recommendations\n",
     "topK = 10\n",
