clean notebooks 	modified:   Part-1-Matrix-Factorization-Recommendation-Retrieval.ipynb 	modified:   Part-3-Indexable-Representation.ipynb

--- a/Part-1-Matrix-Factorization-Recommendation-Retrieval.ipynb
+++ b/Part-1-Matrix-Factorization-Recommendation-Retrieval.ipynb
@@ -79,7 +79,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Probabilistic Matrix Factorization is introduced in the following paper: <a Mnih, A., & Salakhutdinov, R. R. (2008). Probabilistic matrix factorization. In Advances in neural information processing systems (pp. 1257-1264)>http://papers.nips.cc/paper/3208-probabilistic-matrix-factorization</a>. \n",
+    "Probabilistic Matrix Factorization is introduced in the following paper: http://papers.nips.cc/paper/3208-probabilistic-matrix-factorization. \n",
     "\n",
     "The objective is to learn for each user $u$ a vector $x_u$ and each item $i$ a vector $y_i$, such that the following error function is minimized:\n",
     "\\begin{equation}\n",
